k8s/app/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: petclinic
# spec:
#   type: LoadBalancer
#   ports:
#   - port: 8080
#     targetPort: 8080
#   selector:
#     app: petclinic

apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  ports:
  - name: petclinic-svc
    port: 8080 #Port number of the Service
    targetPort: 8080  #Port number of container exposed
    nodePort: 30001  #The real port number of the node
  selector:
    app: petclinic #Service selected pod with tag app: myweb
  type: NodePort
